commit imdb fastapi mongo

--- a/fastapi-mongo/services/backend/Dockerfile
+++ b/fastapi-mongo/services/backend/Dockerfile
@@ -9,7 +9,7 @@ ENV PYTHONPATH=$PWD
 COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-
+RUN pip3 install requests
 COPY src/ .
 CMD ["python", "src/app/main.py"]
 
