Ajour server, models et routes dans gitingore pour pycache

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 fastapi-mongo/services/backend/src/__pycache__/
+fastapi-mongo/services/backend/src/server/__pycache__/
+fastapi-mongo/services/backend/src/server/models/__pycache__/
+fastapi-mongo/services/backend/src/server/routes/__pycache__/
