git =ignore qui marche pas la ...

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
-__pycache__
-*.py[oc]
+fastapi-mongo/services/backend/src/__pycache__
+fastapi-mongo/services/backend/src/server/__pycache__
+fastapi-mongo/services/backend/src/server/models/__pycache__
+fastapi-mongo/services/backend/src/server/routes/__pycache__
