--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,26 @@ fastapi-mongo/services/backend/src/__pycache__
 fastapi-mongo/services/backend/src/server/__pycache__
 fastapi-mongo/services/backend/src/server/models/__pycache__
 fastapi-mongo/services/backend/src/server/routes/__pycache__
+
+.DS_Store
+/dist
+
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
